--- a/druid-spring-boot-autoconfigure/pom.xml
+++ b/druid-spring-boot-autoconfigure/pom.xml
@@ -11,7 +11,7 @@
     </parent>
 
     <artifactId>druid-spring-boot-autoconfigure</artifactId>
-    <name>druid-spring-boot-autoconfigure</name>
+    <name>${project.artifactId}</name>
 
     <dependencies>
         <dependency>
