--- a/druid-spring-boot-samples/src/main/resources/application.yml
+++ b/druid-spring-boot-samples/src/main/resources/application.yml
@@ -6,7 +6,6 @@ logging:
     org.springframework: info
     org.springframework.jdbc: info
     com.github.trang: debug
-    com.alibaba.druid.pool.DruidDataSourceStatLoggerImpl: debug
 
 spring:
   datasource:
@@ -34,7 +33,7 @@ spring:
         slow-sql-millis: 1000
         merge-sql: true
       slf4j:
-        enabled: true
+        enabled: false
         connection-log-enabled: false
         connection-log-error-enabled: true
         statement-log-enabled: false
@@ -44,21 +43,19 @@ spring:
         result-set-log-enabled: false
         result-set-log-error-enabled: true
       wall:
-        enabled: true
+        enabled: false
         db-type: h2
         log-violation: true
         throw-exception: false
-      aop:
+      aopStat:
+        enabled: false
+        patterns: com.github.trang.*
+      web-stat-filter:
+        enabled: false
+      stat-view-servlet:
         enabled: true
-        patterns:
-          - com.github.trang.mapper.*
-      web:
-        web-stat-filter:
-          enabled: true
-        stat-view-servlet:
-          enabled: true
     schema: classpath:import.sql
-  aop:
+  aopStat:
     auto: true
     proxy-target-class: true
 
