--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.github.drtrang</groupId>
     <artifactId>druid-spring-boot</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>${project.artifactId}</name>
@@ -37,7 +37,6 @@
         <module>druid-spring-boot-starter</module>
         <module>druid-spring-boot-autoconfigure</module>
         <module>druid-spring-boot-samples</module>
-        <module>druid-spring-boot-starter-test</module>
     </modules>
 
     <properties>
