--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: java
 jdk: oraclejdk8
-sudo: false
-install: false
+sudo: true
+install: true
 cache:
   directories:
     - $HOME/.m2/repository
 after_success:
-  - mvn clean -U -T 1C -Pcoveralls -pl druid-spring-boot-starter -am cobertura:cobertura coveralls:report
+  - mvn clean -U -T 1C -Pcoveralls cobertura:cobertura coveralls:report
