--- a/druid-spring-boot-samples/src/main/resources/application.yml
+++ b/druid-spring-boot-samples/src/main/resources/application.yml
@@ -49,7 +49,8 @@ spring:
         throw-exception: false
       aop-stat:
         enabled: true
-        patterns: com.github.trang.*
+        patterns:
+          - com.github.trang.*
       web-stat:
         enabled: true
       stat-view-servlet:
