--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: java
+sudo: false
+
 jdk:
   - oraclejdk8
+
 before_script:
-  - chmod +x mvnw
+  - chmod +x ./mvnw
+
 after_success:
-  - mvn clean -Pcoveralls cobertura:cobertura coveralls:report
+  - ./mvnw clean -Pcoveralls cobertura:cobertura coveralls:report
