--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ jdk:
   - oraclejdk8
 
 before_script:
-  - chmod +x ./mvnw
+  - chmod -R 777 ./mvnw
 
 after_success:
   - ./mvnw clean -Pcoveralls cobertura:cobertura coveralls:report
