--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ cache:
   directories:
     - $HOME/.m2/repository
 after_success:
-  - mvn clean -Pcoveralls cobertura:cobertura coveralls:report
+  - cd druid-spring-boot-samples && mvn clean -Pcoveralls cobertura:cobertura coveralls:report
