--- a/druid-spring-boot-samples/src/main/resources/application.yml
+++ b/druid-spring-boot-samples/src/main/resources/application.yml
@@ -47,6 +47,8 @@ spring:
         db-type: h2
         log-violation: true
         throw-exception: false
+        config:
+          select-all-column-allow: false
       aop-stat:
         enabled: false
         patterns:
