--- a/druid-spring-boot-autoconfigure/pom.xml
+++ b/druid-spring-boot-autoconfigure/pom.xml
@@ -23,6 +23,10 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+        </dependency>
+        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
         </dependency>
