--- a/druid-spring-boot-samples/src/main/resources/application.yml
+++ b/druid-spring-boot-samples/src/main/resources/application.yml
@@ -10,6 +10,7 @@ logging:
 
 spring:
   profiles:
+    # 默认环境为 single，多数据源示例改为 dynamic
     active: single
   datasource:
     driver-class-name: org.h2.Driver
@@ -18,6 +19,7 @@ spring:
     password: 123456
     schema: classpath:/import.sql
     druid:
+      # spring.datasource.druid 前缀的配置将注入到 DruidParentDataSource，作为公共参数
       initial-size: 1
       min-idle: 1
       max-active: 10
@@ -87,9 +89,12 @@ spring:
   profiles: dynamic
   autoconfigure:
     exclude:
+      # 多数据源场景会导致 `javax.sql.DataSource` 和 `org.springframework.boot.autoconfigure.jdbc.DataSourceInitializer`
+      # 循环依赖，所以需要手动排除 `org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration`
       - org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
   datasource:
     druid:
+      # 继承 spring.datasource.druid 前缀的配置，同时可以自定义配置，若名称相同则覆盖父配置
       one:
         name: one
         max-active: 50
