--- a/druid-spring-boot-samples/src/main/resources/application.yml
+++ b/druid-spring-boot-samples/src/main/resources/application.yml
@@ -10,8 +10,8 @@ logging:
 
 spring:
   profiles:
-    # 默认环境为 single，多数据源示例改为 dynamic
-    active: single
+    # 默认环境为 default，多数据源示例改为 dynamic
+    active: default
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:file:./samples
@@ -70,6 +70,11 @@ spring:
   aop:
     auto: true
     proxy-target-class: true
+  http:
+    encoding:
+      force: true
+    converters:
+      preferred-json-mapper: gson
 
 mybatis:
   type-aliases-package: com.github.trang.druid.model
@@ -79,7 +84,7 @@ mybatis:
 debug: false
 
 spring:
-  profiles: single
+  profiles: default
 
 ---
 
