--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
         <java.version>1.8</java.version>
         <!-- 基础依赖 -->
         <spring.version>4.3.10.RELEASE</spring.version>
-        <spring-boot.version>1.5.5.RELEASE</spring-boot.version>
+        <spring-boot.version>1.5.6.RELEASE</spring-boot.version>
         <slf4j.version>1.7.25</slf4j.version>
         <servlet-api.version>3.1.0</servlet-api.version>
         <druid.version>1.1.2</druid.version>
@@ -79,6 +79,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-configuration-processor</artifactId>
                 <version>${spring-boot.version}</version>
+                <optional>true</optional>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
