--- a/pom.xml
+++ b/pom.xml
@@ -36,8 +36,8 @@
     <modules>
         <module>druid-spring-boot-starter</module>
         <module>druid-spring-boot-autoconfigure</module>
-        <module>druid-spring-boot-samples</module>
         <module>druid-spring-boot-actuator</module>
+        <module>druid-spring-boot-samples</module>
     </modules>
 
     <properties>
@@ -46,8 +46,9 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
         <!-- 基础依赖 -->
-        <spring-boot.version>1.5.7.RELEASE</spring-boot.version>
         <druid.version>1.1.3</druid.version>
+        <mybatis-spring-boot-starter.version>1.3.1</mybatis-spring-boot-starter.version>
+        <spring-boot.version>1.5.7.RELEASE</spring-boot.version>
         <!-- Maven 插件 -->
         <maven-dependency-plugin.version>3.0.1</maven-dependency-plugin.version>
         <maven-clean-plugin.version>3.0.0</maven-clean-plugin.version>
@@ -89,6 +90,17 @@
                 <version>${spring-boot.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.mybatis.spring.boot</groupId>
+                <artifactId>mybatis-spring-boot-starter</artifactId>
+                <version>${mybatis-spring-boot-starter.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.apache.tomcat</groupId>
+                        <artifactId>tomcat-jdbc</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>com.alibaba</groupId>
