--- a/druid-spring-boot-actuator/pom.xml
+++ b/druid-spring-boot-actuator/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <artifactId>druid-spring-boot</artifactId>
         <groupId>com.github.drtrang</groupId>
+        <artifactId>druid-spring-boot</artifactId>
         <version>1.0.4-SNAPSHOT</version>
     </parent>
 
@@ -15,11 +15,12 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
+            <artifactId>spring-boot-actuator</artifactId>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 
