--- a/druid-spring-boot-actuator-autoconfigure/pom.xml
+++ b/druid-spring-boot-actuator-autoconfigure/pom.xml
@@ -31,6 +31,11 @@
             <artifactId>druid</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
 </project>
