--- a/druid-spring-boot-actuator-starter/pom.xml
+++ b/druid-spring-boot-actuator-starter/pom.xml
@@ -20,7 +20,10 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
-            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
         </dependency>
     </dependencies>
 
