--- a/pom.xml
+++ b/pom.xml
@@ -52,15 +52,17 @@
         <mybatis-spring-boot-starter.version>1.3.1</mybatis-spring-boot-starter.version>
         <spring-boot.version>1.5.7.RELEASE</spring-boot.version>
         <!-- Maven 插件 -->
-        <maven-dependency-plugin.version>3.0.1</maven-dependency-plugin.version>
+        <maven-dependency-plugin.version>3.0.2</maven-dependency-plugin.version>
         <maven-clean-plugin.version>3.0.0</maven-clean-plugin.version>
         <maven-resources-plugin.version>3.0.2</maven-resources-plugin.version>
-        <maven-compiler-plugin.version>3.6.1</maven-compiler-plugin.version>
-        <maven-enforcer-plugin.version>1.4.1</maven-enforcer-plugin.version>
-        <maven-surefire-plugin.version>2.20</maven-surefire-plugin.version>
+        <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
+        <!--<maven-enforcer-plugin.version>1.4.1</maven-enforcer-plugin.version>-->
+        <maven-enforcer-plugin.version>3.0.0-M1</maven-enforcer-plugin.version>
+        <maven-surefire-plugin.version>2.20.1</maven-surefire-plugin.version>
         <maven-jar-plugin.version>3.0.2</maven-jar-plugin.version>
         <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
-        <maven-javadoc-plugin.version>2.10.4</maven-javadoc-plugin.version>
+        <!--<maven-javadoc-plugin.version>2.10.4</maven-javadoc-plugin.version>-->
+        <maven-javadoc-plugin.version>3.0.0-M1</maven-javadoc-plugin.version>
         <maven-install-plugin.version>2.5.2</maven-install-plugin.version>
         <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
         <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
@@ -147,6 +149,7 @@
                         <inherited>true</inherited>
                         <configuration>
                             <skip>true</skip>
+                            <skipTests>true</skipTests>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -196,7 +199,7 @@
                             </execution>
                         </executions>
                         <configuration>
-                            <encoding>UTF-8</encoding>
+                            <encoding>${project.build.sourceEncoding}</encoding>
                             <additionalparam>-Xdoclint:none</additionalparam>
                         </configuration>
                     </plugin>
@@ -238,8 +241,6 @@
     </profiles>
 
     <build>
-        <finalName>${project.artifactId}</finalName>
-        <defaultGoal>package</defaultGoal>
         <plugins>
             <plugin>
                 <artifactId>maven-dependency-plugin</artifactId>
@@ -277,6 +278,7 @@
                 <inherited>true</inherited>
                 <configuration>
                     <encoding>${project.build.sourceEncoding}</encoding>
+                    <detail>true</detail>
                 </configuration>
             </plugin>
             <plugin>
